<resources>
    <string name="app_name">Homework_2</string>
    <string name="eduprompt">专业</string>
    <string name="hobby_1">音乐</string>
    <string name="hobby_2">运动</string>
    <string name="hobby_3">游泳</string>
    <string name="hobby_4">阅读</string>
    <string name="ques_1">请输入姓名：</string>
    <string name="name_1">姓名</string>
    <string name="sex_1">性别</string>
    <string name="sex_f_1">男</string>
    <string name="sex_f_2">女</string>
    <string name="major_1">专业:</string>
    <string name="hobby">兴趣爱好:</string>
    <string name="submit">提交</string>
    <string name="Concel_1">取消</string>
</resources>